@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2016-2024 Nuxeo (http://nuxeo.com/) and others.
+ * (C) Copyright 2016-2025 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -117,7 +117,7 @@ public class TestDBSCachingRepository {
 
         assertEquals(1, dbStates.size());
         assertEquals(2, cachedStates.size());
-        assertTrue(cachedStates.contains(dbStates.get(0)));
+        assertTrue(cachedStates.contains(dbStates.getFirst()));
     }
 
     @Test
